fixed alignment and performed code cleanup

--- a/style.css
+++ b/style.css
@@ -6,6 +6,12 @@ body {
     background-color: #1D1C1B;
 }
 
+#subContainer{
+    display: flex;
+align-items: center;
+flex-direction: column;
+}
+
 h2 {
     font-family: 'Audiowide', cursive;
     display: flex;
@@ -15,7 +21,7 @@ h2 {
 }
 
 img {
-    width: 60%;
+    width: 250px;
     background-color: beige;
 }
 
@@ -27,7 +33,7 @@ button {
     border-radius: 18px;
 }
 
-button:hover{
+button:hover {
     cursor: pointer;
 }
 
@@ -41,28 +47,28 @@ button:hover{
     justify-content: center;
 }
 
-.center{
+.center {
     display: flex;
-justify-content: center;
+    justify-content: center;
 }
 
-.message {
+.display{
+    color: beige;
+    font-size: 18px;
+    display: flex;
+    margin-bottom: 15px;
+    flex-direction: column;
+    align-items: center;
+}
+
+.content {
     color: beige;
     font-size: 18px;
 }
 
-.score{
-    color: beige;
-    font-size: 16px;
-}
-
-.result {
-    color: beige;
-    font-size: 24px;
-}
-
 footer {
     bottom: 0;
+    font-size: 12px;
     color: beige;
     position: fixed;
 }
